--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=desafio-profesional-back
+spring.jackson.property-naming-strategy=SNAKE_CASE
+spring.flyway.locations=classpath:/db/migration
+spring.flyway.schemas=productos
+spring.flyway.baseline-on-migrate=true
+spring.flyway.enabled=true
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/productos?currentSchema=productos
+spring.datasource.username=postgres
+spring.datasource.password=postgres
